--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_API_ENDPOINT='https://react-http-tutorial-746a1-default-rtdb.firebaseio.com/users.json'
-REACT_APP_API_DELETE='https://react-http-tutorial-746a1-default-rtdb.firebaseio.com/users/'
+REACT_APP_API_ENDPOINT='https://react-http-tutorial-746a1-default-rtdb.firebaseio.com'
